manifest/cem/staging/ingress/cem-console.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cem-console
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/server-snippet: |
      access_log /var/log/nginx/consolepre.cempro.cn.access.log;
      error_log /var/log/nginx/consolepre.cempro.cn.error.log;
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - consolepre.cempro.cn
    secretName: cempro.cn-tls
  rules:
  - host: consolepre.cempro.cn
    http:
      paths:
      - path: /console/
        pathType: Prefix
        backend:
          service:
            name: cem-console
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cem-console-web
            port:
              number: 80
...
